[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-salesforce-301-generator"
version = "1.0.0"
description = "CLI tool to fetch sitemap XML and emit a CSV for 301 redirect mapping during site migrations."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
sitemap-to-csv = "sitemap_to_csv:main"

[project.urls]
Homepage = "https://github.com/bpoulsen/python-salesforce-301-generator"

[tool.setuptools]
py-modules = ["sitemap_to_csv"]
